--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.log
 *.sql
 *.txt
+settings.py
 [submodule "frappe-client"]
 	path = frappe-client
 	url = https://github.com/DigitasDom/frappe-client
